# tetris

./: README.md  Tetris.sln
Debug/: Tetris.ilk
Tetris/: CMakeLists.txt  GLWindow.cpp  GLWindow.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Input.cpp  Input.h  Tetris.vcxproj  Tetris.vcxproj.filters  frag.glsl  loadTexture.cpp  loadTexture.h  main.cpp  pieces.cpp  pieces.h  vertex.glsl
Tetris/Debug/: CL.read.1.tlog  CL.write.1.tlog  Game.cpp.nativecodeanalysis.xml  Graphics.cpp.nativecodeanalysis.xml  Tetris.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  main.cpp.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc110.idb
Tetris/glew-2.1.0/: CMakeLists.txt
Tetris/soil/: CMakeLists.txt
Tetris/soil/projects/VC9/: UpgradeLog.htm
Tetris/soil/projects/VC9/Debug/: CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SOIL.lib  lib.command.1.tlog  vc110.idb
devil/include/IL/: config.h
devil/lib/unicode/: DevIL.lib  ILU.lib  ILUT.lib
soil/projects/VC9/: UpgradeLog.XML
soil/projects/VC9/Debug/: CL.write.1.tlog  SOIL.lastbuildstate  cl.command.1.tlog
